<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/profile_menu"
        android:title="Profile"
        android:icon="@drawable/ic_profile"/>
<!--    <item-->
<!--        android:id="@+id/setting_menu"-->
<!--        android:title="Setting"-->
<!--        android:icon="@drawable/ic_setting"/>-->
    <item
        android:id="@+id/step_menu"
        android:title="Step"
        android:icon="@drawable/ic_stepping"/>

    <item
        android:id="@+id/home_menu"
        android:title="Home"
        android:icon="@drawable/ic_home"/>

    <item
        android:id="@+id/map_menu"
        android:title="Map"
        android:icon="@drawable/ic_map"/>
    <item
        android:id="@+id/weather_menu"
        android:title="Weather"
        android:icon="@drawable/ic_weather"/>


</menu>