<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">


    <!--    <FrameLayout-->
    <!--        android:id="@+id/mainFrameLayout"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="match_parent" />-->

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/nav_host_fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />

    <!--    <androidx.fragment.app.FragmentContainerView-->
    <!--        android:id="@+id/nav_host_fragment_container"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="match_parent"-->
    <!--        android:name="androidx.navigation.fragment.NavHostFragment"-->
    <!--        app:defaultNavHost="true"-->
    <!--        app:navGraph="@navigation/navigation"/>-->


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        app:itemBackground="@color/Gold"
        app:itemIconTint="@drawable/menu_click_color"
        app:itemTextColor="@drawable/menu_click_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/navi_menu"
        tools:ignore="MissingConstraints"
        app:labelVisibilityMode="labeled"/>

</androidx.constraintlayout.widget.ConstraintLayout>